# ProjectOutlawn

./: Credits.md  README.md  debugge.vcxproj  dllmain.cpp  todo.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE_REQUEST.md  feature_request.md
.github/workflows/: actions.yml
DllProxy/: debugge.vcxproj  dinput8.def  dllmain.cpp
GhidraNotes/: readme.md
GhidraNotes/BreeMsgs/: Categories.h  Exceptions.h  Message1.h  Message2.h  Message3.h  RightFormatExample.h
GhidraNotes/Progress/: ServerPlayer.h
GhidraNotes/TheNewStuff/: Tutorial.md  TutorialNew.md
GhidraNotes/TheOldStuff/: Progress.md  README.md  XRefOrder.md
GhidraStuff/: readme.md
GhidraStuff/BreeMsgs/: Categories.h
GhidraStuff/Progress/: ServerPlayer.h
GhidraStuff/TheNewStuff/: TutorialNew.md
GhidraStuff/TheOldStuff/: README.md  RoadmapNew.md  String.md  XRefOrder.md
docs/: Compiling.md  Credits.md  Faq.md  Launch_args.md  Roadmap.md
docs/GhidraStuff/: readme.md
launcher/: readme.md
launcher/PlaceholderCLILauncher/: launcher.bat  readme.md
launcher/QTLauncher/: GWLauncher.pyproject  Launcher.py  b64-old.txt  b64-unused.txt  b64.txt  main.py  pyinstaller.spec  pyproject.toml  server_browser_window.py
launcher/QTLauncher/DllProxy/Client/: dllmain.cpp
launcher/QTLauncher/DllProxy/ClientConnector/: dllmain.cpp
launcher/QTLauncher/DllProxy/Server/: debugge.sln
launcher/RushedQTLauncher/: CMakeLists.txt  main.cpp
launcher/src/: main.py  pyinstaller.spec  requirements.txt
other/: Offsets.txt  SlkkrOffsets.txt
other/PVZGWSdk/: AABBData.h  AIActorComponentData.h  AIActorData.h  AIAltFireFromAntState.h  AIAnimBinding.h  AIAttractorComponentData.h  AIAttractorData.h  AIAwarenessComponentBinding.h  AIAwarenessComponentData.h  AIAwarenessTargetEntityData.h  AIAwarenessTargetInfo.h  AIAwarenessTargetType.h  AIBehaviourTriggerEntityData.h  (+4094 more)
(+15 files in other folders)
