[tool.poetry]
name = "project-outlawn"
version = "0.1.0"
description = "Project Outlawn"
authors = ["Placeholder"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyQt6 = "^6.0"
pyinstaller = "^5.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

#[project]
#name = "project-outlawn"
#version = "0.0.3"
#dependencies = [
#    "PyQt6",
#    "PySide6",
#    "pyinstaller"
#]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.0"
pyinstaller = "^5.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyinstaller]
# PyInstaller specific configuration
script = "main.py"  # Your main entry script
additional_files = [
    "server_browser_window.py"
]
